Repository 구현체 구현 및 심화 요구사항 적용 완료